--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "express-react-views": "^0.11.0",
+    "method-override": "^3.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sequelize": "^6.26.0"
   },
   "devDependencies": {
