--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon backend/index.js",
+    "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
