--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,18 @@
   "dependencies": {
     "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-handlebars": "^6.0.6",
+    "express-rate-limit": "^6.7.0",
     "express-react-views": "^0.11.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
