--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"npm start\""
+    "dev": "concurrently \"cd ../backend && node server.js\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
