--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "./backend/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd ./backend && node server.js"
-    
+    "start": "concurrently \"cd ./backend && node server.js\" \"cd ./frontend && npm start\""
   },
   "repository": {
     "type": "git",
@@ -18,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/BDedafoe/Local_Guide/issues"
   },
-  "homepage": "https://github.com/BDedafoe/Local_Guide#readme"
+  "homepage": "https://github.com/BDedafoe/Local_Guide#readme",
+  "dependencies": {
+    "concurrently": "^7.6.0"
+  }
 }
