--- a/package.json
+++ b/package.json
@@ -19,7 +19,17 @@
   },
   "homepage": "https://github.com/BDedafoe/Local_Guide#readme",
   "dependencies": {
+    "axios": "^1.2.1",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^7.6.0",
-    "dotenv": "^16.0.3"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "express-react-views": "^0.11.0",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.26.0"
   }
 }
