--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "local_guide",
   "version": "1.0.0",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "./backend/server.js",
+  "main": "./frontend/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"cd ./backend && node server.js\" \"cd ./frontend && npm start\""
