--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-react-views": "^0.11.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "react-toastify": "^9.1.1",
     "sequelize": "^6.26.0"
   }
 }
